--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@symfony/webpack-encore": "^1.5.0",
     "adonis-preset-ts": "^2.1.0",
     "pino-pretty": "^5.1.3",
+    "sass": "^1.37.5",
+    "sass-loader": "^12.1.0",
     "typescript": "^4.2.4",
     "youch": "^2.2.2",
     "youch-terminal": "^1.1.1"
@@ -22,8 +24,23 @@
     "@adonisjs/session": "^6.1.1",
     "@adonisjs/shield": "^7.0.5",
     "@adonisjs/view": "^6.0.8",
+    "@babel/core": "^7.15.0",
+    "@babel/preset-env": "^7.15.0",
+    "@babel/preset-react": "^7.14.5",
+    "@babel/preset-typescript": "^7.15.0",
+    "@types/react": "^17.0.16",
+    "@types/react-dom": "^17.0.9",
+    "babel-loader": "^8.2.2",
+    "css-loader": "^5.2.7",
+    "css-modules-typescript-loader": "^4.0.1",
+    "file-loader": "^6.2.0",
+    "path": "^0.12.7",
     "proxy-addr": "^2.0.7",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "reflect-metadata": "^0.1.13",
-    "source-map-support": "^0.5.19"
+    "source-map-support": "^0.5.19",
+    "style-loader": "^2.0.0",
+    "ts-loader": "^8.3.0"
   }
 }
