--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,9 @@ NODE_ENV=development
 APP_KEY=VDyJEz-KX5C-yS8q64S1PvqD7PcXs1bG
 SESSION_DRIVER=cookie
 CACHE_VIEWS=false
+DB_CONNECTION=sqlite
+MYSQL_HOST=localhost
+MYSQL_PORT=3306
+MYSQL_USER=lucid
+MYSQL_PASSWORD=
+MYSQL_DB_NAME=lucid
