--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "devDependencies": {
     "@adonisjs/assembler": "^5.3.5",
+    "@babel/plugin-transform-runtime": "^7.15.0",
     "@symfony/webpack-encore": "^1.5.0",
     "adonis-preset-ts": "^2.1.0",
     "pino-pretty": "^5.1.3",
@@ -20,6 +21,7 @@
   },
   "dependencies": {
     "@adonisjs/core": "^5.1.11",
+    "@adonisjs/lucid": "^15.0.3",
     "@adonisjs/repl": "^3.1.5",
     "@adonisjs/session": "^6.1.1",
     "@adonisjs/shield": "^7.0.5",
@@ -30,16 +32,24 @@
     "@babel/preset-typescript": "^7.15.0",
     "@types/react": "^17.0.16",
     "@types/react-dom": "^17.0.9",
+    "axios": "^0.21.1",
     "babel-loader": "^8.2.2",
+    "bootstrap": "^4.6.0",
     "css-loader": "^5.2.7",
     "css-modules-typescript-loader": "^4.0.1",
     "file-loader": "^6.2.0",
+    "jquery": "^1.9.1",
+    "luxon": "^2.0.2",
+    "mysql": "^2.18.1",
     "path": "^0.12.7",
+    "popper.js": "^1.16.1",
     "proxy-addr": "^2.0.7",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
     "reflect-metadata": "^0.1.13",
     "source-map-support": "^0.5.19",
+    "sqlite3": "^5.0.2",
     "style-loader": "^2.0.0",
     "ts-loader": "^8.3.0"
   }
