--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@babel/preset-typescript": "^7.15.0",
     "@types/react": "^17.0.16",
     "@types/react-dom": "^17.0.9",
+    "@types/react-router-dom": "^5.1.8",
     "axios": "^0.21.1",
     "babel-loader": "^8.2.2",
     "bootstrap": "^4.6.0",
@@ -47,6 +48,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "reflect-metadata": "^0.1.13",
     "source-map-support": "^0.5.19",
     "sqlite3": "^5.0.2",
